# SDL2Calc

./: CMakeLists.txt  init.cpp  init.hpp  main.cpp  pch.hpp
